Optimized and simplified code up to 05_3_DWH_dimSalesRep_Incremental.ipynb

--- a/00_0_CHECK_1_install.ipynb
+++ b/00_0_CHECK_1_install.ipynb
@@ -18,12 +18,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "start_time": "2023-06-12T16:51:32.446665Z",
-     "end_time": "2023-06-12T16:51:32.594285Z"
+     "start_time": "2023-08-29T13:33:27.906457Z",
+     "end_time": "2023-08-29T13:33:28.291601Z"
     }
    },
    "outputs": [],
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "outputs": [
     {
      "name": "stdout",
@@ -59,6 +59,8 @@
       "COMPUTERNAME: AKDGPORT11191\n",
       "COMSPEC: C:\\WINDOWS\\system32\\cmd.exe\n",
       "DRIVERDATA: C:\\Windows\\System32\\Drivers\\DriverData\n",
+      "FPS_BROWSER_APP_PROFILE_STRING: Internet Explorer\n",
+      "FPS_BROWSER_USER_PROFILE_STRING: Default\n",
       "HOMEDRIVE: C:\n",
       "HOMEPATH: \\Users\\overvelj\n",
       "IDEA_INITIAL_DIRECTORY: C:\\WINDOWS\\system32\n",
@@ -72,7 +74,7 @@
       "ONEDRIVE: C:\\Users\\overvelj\\OneDrive - Karel de Grote Hogeschool\n",
       "ONEDRIVECOMMERCIAL: C:\\Users\\overvelj\\OneDrive - Karel de Grote Hogeschool\n",
       "OS: Windows_NT\n",
-      "PATH: C:\\DevApps\\DeltaSpark\\Scripts;C:\\Program Files (x86)\\Common Files\\Oracle\\Java\\javapath;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Python\\Python39;C:\\Program Files\\Common Files\\Oracle\\Java\\javapathREMOVE;C:\\Program Files (x86)\\Common Files\\Oracle\\Java\\javapathREMOVE;C:\\WINDOWS\\system32;C:\\WINDOWS;C:\\WINDOWS\\System32\\Wbem;C:\\WINDOWS\\System32\\WindowsPowerShell\\v1.0\\;C:\\WINDOWS\\System32\\OpenSSH\\;C:\\Program Files (x86)\\Microsoft SQL Server\\150\\DTS\\Binn\\;C:\\Program Files\\dotnet\\;C:\\Program Files\\Azure Data Studio\\bin;C:\\Program Files\\Graphviz\\bin;C:\\Program Files\\mongosh\\;C:\\Program Files\\MongoDB\\Server\\5.0\\bin;C:\\DevApps\\VENV309_DS2\\\\Scripts;C:\\Program Files\\Microsoft SQL Server\\Client SDK\\ODBC\\170\\Tools\\Binn\\;C:\\DevApps\\gradle-7.6\\bin;C:\\Program Files\\Git\\cmd;C:\\Program Files\\Amazon\\AWSCLIV2\\;C:\\Program Files\\Docker\\Docker\\resources\\bin;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Python\\Python310_9\\Scripts\\;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Python\\Python310_9\\;C:\\Users\\overvelj\\AppData\\Local\\Microsoft\\WindowsApps;C:\\Users\\overvelj\\.dotnet\\tools;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Microsoft VS Code\\bin;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Git\\cmd;C:\\Program Files\\mongosh\\;C:\\Users\\overvelj\\AppData\\Local\\JetBrains\\Toolbox\\scripts;C:\\DevApps\\spark-3.4.0-bin-hadoop3\\bin;C:\\DevApps\\winutils\\winutils-master\\hadoop-3.4.0-win10-x64\\bin;C:\\Program Files\\Java\\jdk-11.0.8\\bin;C:\\DevApps\\spark-3.4.0-bin-hadoop3\\bin;C:\\DevApps\\winutils\\winutils-master\\hadoop-3.4.0-win10-x64\\bin;C:\\Program Files\\Java\\jdk-11.0.8\\bin\n",
+      "PATH: C:\\DevApps\\DeltaSpark\\Scripts;C:\\Program Files (x86)\\Common Files\\Oracle\\Java\\javapath;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Python\\Python39;C:\\Program Files\\Common Files\\Oracle\\Java\\javapathREMOVE;C:\\Program Files (x86)\\Common Files\\Oracle\\Java\\javapathREMOVE;C:\\WINDOWS\\system32;C:\\WINDOWS;C:\\WINDOWS\\System32\\Wbem;C:\\WINDOWS\\System32\\WindowsPowerShell\\v1.0\\;C:\\WINDOWS\\System32\\OpenSSH\\;C:\\Program Files (x86)\\Microsoft SQL Server\\150\\DTS\\Binn\\;C:\\Program Files\\dotnet\\;C:\\Program Files\\Azure Data Studio\\bin;C:\\Program Files\\Graphviz\\bin;C:\\Program Files\\mongosh\\;C:\\Program Files\\MongoDB\\Server\\5.0\\bin;C:\\DevApps\\VENV309_DS2\\\\Scripts;C:\\Program Files\\Microsoft SQL Server\\Client SDK\\ODBC\\170\\Tools\\Binn\\;C:\\DevApps\\gradle-7.6\\bin;C:\\Program Files\\Docker\\Docker\\resources\\bin;C:\\Program Files\\Git\\cmd;C:\\Program Files\\Amazon\\AWSCLIV2\\;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Python\\Python310_9\\Scripts\\;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Python\\Python310_9\\;C:\\Users\\overvelj\\AppData\\Local\\Microsoft\\WindowsApps;C:\\Users\\overvelj\\.dotnet\\tools;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Microsoft VS Code\\bin;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Git\\cmd;C:\\Program Files\\mongosh\\;C:\\Users\\overvelj\\AppData\\Local\\JetBrains\\Toolbox\\scripts;C:\\DevApps\\bigdatatools\\spark-3.4.0-bin-hadoop3\\bin;C:\\DevApps\\bigdatatools\\hadoop-3.4.0-win10-x64\\bin;C:\\Program Files\\Java\\jdk-11.0.8\\bin\n",
       "PATHEXT: .COM;.EXE;.BAT;.CMD;.VBS;.VBE;.JS;.JSE;.WSF;.WSH;.MSC;.PY;.PYW\n",
       "PROCESSOR_ARCHITECTURE: AMD64\n",
       "PROCESSOR_IDENTIFIER: Intel64 Family 6 Model 142 Stepping 12, GenuineIntel\n",
@@ -111,12 +113,12 @@
       "VIRTUAL_ENV: C:\\DevApps\\DeltaSpark\n",
       "WINDIR: C:\\WINDOWS\n",
       "ZES_ENABLE_SYSMAN: 1\n",
-      "_OLD_VIRTUAL_PATH: C:\\Program Files (x86)\\Common Files\\Oracle\\Java\\javapath;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Python\\Python39;C:\\Program Files\\Common Files\\Oracle\\Java\\javapathREMOVE;C:\\Program Files (x86)\\Common Files\\Oracle\\Java\\javapathREMOVE;C:\\WINDOWS\\system32;C:\\WINDOWS;C:\\WINDOWS\\System32\\Wbem;C:\\WINDOWS\\System32\\WindowsPowerShell\\v1.0\\;C:\\WINDOWS\\System32\\OpenSSH\\;C:\\Program Files (x86)\\Microsoft SQL Server\\150\\DTS\\Binn\\;C:\\Program Files\\dotnet\\;C:\\Program Files\\Azure Data Studio\\bin;C:\\Program Files\\Graphviz\\bin;C:\\Program Files\\mongosh\\;C:\\Program Files\\MongoDB\\Server\\5.0\\bin;C:\\DevApps\\VENV309_DS2\\\\Scripts;C:\\Program Files\\Microsoft SQL Server\\Client SDK\\ODBC\\170\\Tools\\Binn\\;C:\\DevApps\\gradle-7.6\\bin;C:\\Program Files\\Git\\cmd;C:\\Program Files\\Amazon\\AWSCLIV2\\;C:\\Program Files\\Docker\\Docker\\resources\\bin;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Python\\Python310_9\\Scripts\\;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Python\\Python310_9\\;C:\\Users\\overvelj\\AppData\\Local\\Microsoft\\WindowsApps;C:\\Users\\overvelj\\.dotnet\\tools;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Microsoft VS Code\\bin;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Git\\cmd;C:\\Program Files\\mongosh\\;C:\\Users\\overvelj\\AppData\\Local\\JetBrains\\Toolbox\\scripts\n",
+      "_OLD_VIRTUAL_PATH: C:\\Program Files (x86)\\Common Files\\Oracle\\Java\\javapath;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Python\\Python39;C:\\Program Files\\Common Files\\Oracle\\Java\\javapathREMOVE;C:\\Program Files (x86)\\Common Files\\Oracle\\Java\\javapathREMOVE;C:\\WINDOWS\\system32;C:\\WINDOWS;C:\\WINDOWS\\System32\\Wbem;C:\\WINDOWS\\System32\\WindowsPowerShell\\v1.0\\;C:\\WINDOWS\\System32\\OpenSSH\\;C:\\Program Files (x86)\\Microsoft SQL Server\\150\\DTS\\Binn\\;C:\\Program Files\\dotnet\\;C:\\Program Files\\Azure Data Studio\\bin;C:\\Program Files\\Graphviz\\bin;C:\\Program Files\\mongosh\\;C:\\Program Files\\MongoDB\\Server\\5.0\\bin;C:\\DevApps\\VENV309_DS2\\\\Scripts;C:\\Program Files\\Microsoft SQL Server\\Client SDK\\ODBC\\170\\Tools\\Binn\\;C:\\DevApps\\gradle-7.6\\bin;C:\\Program Files\\Docker\\Docker\\resources\\bin;C:\\Program Files\\Git\\cmd;C:\\Program Files\\Amazon\\AWSCLIV2\\;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Python\\Python310_9\\Scripts\\;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Python\\Python310_9\\;C:\\Users\\overvelj\\AppData\\Local\\Microsoft\\WindowsApps;C:\\Users\\overvelj\\.dotnet\\tools;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Microsoft VS Code\\bin;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Git\\cmd;C:\\Program Files\\mongosh\\;C:\\Users\\overvelj\\AppData\\Local\\JetBrains\\Toolbox\\scripts\n",
       "_OLD_VIRTUAL_PROMPT: $P$G\n",
       "PYDEVD_USE_FRAME_EVAL: NO\n",
-      "JPY_INTERRUPT_EVENT: 1332\n",
-      "IPY_INTERRUPT_EVENT: 1332\n",
-      "JPY_PARENT_PID: 1452\n",
+      "JPY_INTERRUPT_EVENT: 1660\n",
+      "IPY_INTERRUPT_EVENT: 1660\n",
+      "JPY_PARENT_PID: 1664\n",
       "TERM: xterm-color\n",
       "CLICOLOR: 1\n",
       "FORCE_COLOR: 1\n",
@@ -124,11 +126,10 @@
       "PAGER: cat\n",
       "GIT_PAGER: cat\n",
       "MPLBACKEND: module://matplotlib_inline.backend_inline\n",
-      "SPARK_HOME: C:\\DevApps\\spark-3.4.0-bin-hadoop3\n",
-      "HADOOP_HOME: C:\\DevApps\\winutils\\winutils-master\\hadoop-3.4.0-win10-x64\n",
-      "PYSPARK_HADOOP_VERSION: 3\n",
-      "SPARK_AUTH_SOCKET_TIMEOUT: 15\n",
-      "SPARK_BUFFER_SIZE: 65536\n"
+      "PYSPARK_PYTHON: python\n",
+      "SPARK_HOME: C:\\DevApps\\bigdatatools\\spark-3.4.0-bin-hadoop3\n",
+      "HADOOP_HOME: C:\\DevApps\\bigdatatools\\hadoop-3.4.0-win10-x64\n",
+      "PYSPARK_HADOOP_VERSION: 3\n"
      ]
     }
    ],
@@ -140,8 +141,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-06-12T16:51:32.463156Z",
-     "end_time": "2023-06-12T16:51:32.694516Z"
+     "start_time": "2023-08-29T13:33:28.291601Z",
+     "end_time": "2023-08-29T13:33:28.306864Z"
     }
    }
   },
@@ -158,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "builder = SparkSession.builder \\\n",
@@ -175,8 +176,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-06-12T16:51:32.489632Z",
-     "end_time": "2023-06-12T16:51:32.710947Z"
+     "start_time": "2023-08-29T13:33:28.306864Z",
+     "end_time": "2023-08-29T13:33:28.422761Z"
     }
    }
   },
@@ -201,14 +202,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "outputs": [
     {
      "data": {
-      "text/plain": "<pyspark.sql.session.SparkSession at 0x1bbf6bf0850>",
-      "text/html": "\n            <div>\n                <p><b>SparkSession - in-memory</b></p>\n                \n        <div>\n            <p><b>SparkContext</b></p>\n\n            <p><a href=\"http://host.docker.internal:4040\">Spark UI</a></p>\n\n            <dl>\n              <dt>Version</dt>\n                <dd><code>v3.4.0</code></dd>\n              <dt>Master</dt>\n                <dd><code>local[*]</code></dd>\n              <dt>AppName</dt>\n                <dd><code>InstallCheck</code></dd>\n            </dl>\n        </div>\n        \n            </div>\n        "
+      "text/plain": "<pyspark.sql.session.SparkSession at 0x225e16daca0>",
+      "text/html": "\n            <div>\n                <p><b>SparkSession - in-memory</b></p>\n                \n        <div>\n            <p><b>SparkContext</b></p>\n\n            <p><a href=\"http://AKDGPORT11191.mshome.net:4040\">Spark UI</a></p>\n\n            <dl>\n              <dt>Version</dt>\n                <dd><code>v3.4.0</code></dd>\n              <dt>Master</dt>\n                <dd><code>local[*]</code></dd>\n              <dt>AppName</dt>\n                <dd><code>InstallCheck</code></dd>\n            </dl>\n        </div>\n        \n            </div>\n        "
      },
-     "execution_count": 15,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -220,8 +221,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-06-12T16:51:32.694516Z",
-     "end_time": "2023-06-12T16:51:32.824192Z"
+     "start_time": "2023-08-29T13:33:28.322786Z",
+     "end_time": "2023-08-29T13:33:43.054036Z"
     }
    }
   },
@@ -239,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "outputs": [
     {
      "name": "stdout",
@@ -277,7 +278,7 @@
      "data": {
       "text/plain": "DataFrame[summary: string, value: string]"
      },
-     "execution_count": 16,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -296,8 +297,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-06-12T16:51:32.750073Z",
-     "end_time": "2023-06-12T16:51:33.098593Z"
+     "start_time": "2023-08-29T13:33:43.056036Z",
+     "end_time": "2023-08-29T13:33:48.232373Z"
     }
    }
   },
@@ -313,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "outputs": [
     {
      "name": "stdout",
@@ -357,8 +358,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-06-12T16:51:32.993592Z",
-     "end_time": "2023-06-12T16:51:33.790440Z"
+     "start_time": "2023-08-29T13:33:48.232373Z",
+     "end_time": "2023-08-29T13:33:50.956979Z"
     }
    }
   },
@@ -380,13 +381,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "outputs": [
     {
      "data": {
       "text/plain": "DataFrame[summary: string, word: string, amount: string]"
      },
-     "execution_count": 18,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -404,8 +405,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-06-12T16:51:33.797893Z",
-     "end_time": "2023-06-12T16:51:38.011983Z"
+     "start_time": "2023-08-29T13:33:50.956979Z",
+     "end_time": "2023-08-29T13:34:05.964298Z"
     }
    }
   }
