--- a/01_1_TASK_1_sparkBasics_SOLUTION.ipynb
+++ b/01_1_TASK_1_sparkBasics_SOLUTION.ipynb
@@ -6,14 +6,15 @@
     "# SparkBasicsTask\n",
     "> 1. Run the first cell to start the Spark Server\n",
     "> 2. Run the second cell to excecute the wordcount code\n",
-    "> 3. Go to the SparkUI Url. How many jobs and stages are there and why?\n",
+    "> 3. Go to the SparkUI Url. How many job and stages are there and why?\n",
     "> 4. Copy/paste te wordcount code in a new cell.\n",
     "> 5. Add lines of code after the reduceByKey to also save the counts of the first letter of the word. The wordCount and letterCount must be saved seperately.\n",
-    "_Tip: Python key values are represented by Tuples. To change the (word, count) tuple to (letter,count) you kan use a map function with (wordTuple[0][0],wordTuple[1]). The first [0] represents the first element of the tuple (the key). The second [0] is the first letter of the key string)_\n",
+    "> _Tip: Python key values are represented by Tuples. To change the (word, count) tuple to (letter,count) you kan use a map function with (wordTuple[0][0],wordTuple[1]). The first [0] represents the first element of the tuple (the key). The second [0] is the first letter of the key string)\n",
     "> 6. Go to the SparkUI Url. How many jobs are created? Why? Inspect the DAG of the 2 last jobs.\n",
-    "_The engine creates a job for every \"action\" in the code. For every action it will create a new excecution plan and all tranformations will be processed twice._\n",
+    "\n",
+    "> _The engine creates a job for every \"action\" in the code. For every action it will create a new excecution plan and all tranformations will be processed twice._\n",
     "> 7. Go to the Storage tab. Notice the tab is empty.\n",
-    "> 8. To avoid Spark from excecuting all the steps twice, add wordCounts.cache() after the reduceByKey.\n",
+    "> 8. To avoid Spark from excecuting all the steps twice add wordCounts.cache() after the reduceByKey.\n",
     "> 9. Run the code again. How many jobs are created now? Why? Inspect the DAG of the 2 last jobs. What is the difference with the previous DAGS?\n",
     "> 10. Go to the Storage tab. Notice the tab is not empty anymore. Inspect the storage tab.\n",
     "> _By enabling caching, the first job will store the intermediate result. The second job will reuse this result, which will prevent processing the same steps twice. With caching, you can choose between processing and memory. When enough memory is available you can greatly increase the performance of the jobs._\n",
@@ -85,13 +86,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 22,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "PythonRDD[58] at RDD at PythonRDD.scala:53"
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n",
+      "None\n"
+     ]
+    }
+   ],
    "source": [
-    "#Add your code here"
+    "import datetime\n",
+    "\n",
+    "lines = sc.textFile(\"./FileStore/tables/shakespeare.txt\")\n",
+    "words = lines.flatMap(lambda line: line.split(\" \")).filter(lambda word: len(word) > 0)\n",
+    "wordKv = words.map(lambda word: (word, 1))\n",
+    "wordCounts = wordKv.reduceByKey(lambda a,b:a +b)\n",
+    "#print(wordCounts.first())\n",
+    "wordCounts.cache()\n",
+    "letterCounts = wordCounts.map(lambda wordTuple: (wordTuple[0][0],wordTuple[1]) )\n",
+    "letterCounts = letterCounts.reduceByKey(lambda a,b:a +b)\n",
+    "print(wordCounts.saveAsTextFile(\"./output/words\" + datetime.datetime.now().strftime(\"%m%d%Y%H%M%S\")))\n",
+    "print(letterCounts.saveAsTextFile(\"./output/letters\" + datetime.datetime.now().strftime(\"%m%d%Y%H%M%S\")))\n"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-08-31T12:13:22.618403Z",
+     "end_time": "2023-08-31T12:13:31.660529Z"
+    }
    }
   },
   {
