--- a/05_4_DWH_factSales.ipynb
+++ b/05_4_DWH_factSales.ipynb
@@ -6,10 +6,7 @@
     "### Config stuff"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -23,10 +20,7 @@
     "from pyspark.sql.functions import *\n"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -57,10 +51,7 @@
     "builder.getOrCreate()"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -71,10 +62,7 @@
     "When creating a fact table always follow the listed steps in order."
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -92,15 +80,11 @@
     "\n",
     "\n",
     "In this case we just rename Amount and create a default count_mv column.\n",
-    "*In this case, the transformations are minimal.\n",
-    "In reality, those transformations can be far more complex. If so, it can be advisable to work out the transforms in more then one step.*\n",
+    "The transformations are minimal. In reality, those transformations can be far more complex. If so, it can be advisable to work out the transforms in more then one step.*\n",
     "\n"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -126,10 +110,7 @@
     "#sale_src_df.show(20)"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -139,10 +120,7 @@
     "#### 2 MAKE DIMENSION TABLES AVAILABLE AS VIEWS"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    },
    "execution_count": 1
   },
@@ -157,10 +135,7 @@
     "dim_salesrep.createOrReplaceTempView(\"dimSalesRep\")"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -174,10 +149,7 @@
     "2. Use the dimension tables to look up the surrogate keys that correspond with the natural key value. In case of SCD2 dimension use the scd_start en scd_end to find the correct version of the data in the dimension\n"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    },
    "outputs": []
   },
@@ -221,10 +193,7 @@
     "salesFactFromSource.show(10)\n"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -234,10 +203,7 @@
     "The first time loading the fact table perform a FULL load. All data is written to the Delta Table."
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -252,10 +218,7 @@
     "#spark.sql(\"ALTER TABLE dimSalesRep  ADD columns (salesRepSK long GENERATED ALWAYS AS IDENTITY (START WITH 0 INCREMENT BY 1)\")"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -271,10 +234,7 @@
     "- * To make the loading proces even faster you can opt to only read changed rows from the source tables (sales operational table in this case). This however requires a \"last_updated\" timestamp in the source table.*"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -293,10 +253,7 @@
     "fact.alias(\"current\").merge(salesFactFromSource.alias(\"new\"),\"current.OrderID = new.OrderId\").whenNotMatchedInsertAll().execute()"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -342,10 +299,7 @@
     "\n"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -354,10 +308,7 @@
     "### Checking the history of your delta fact table"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -370,10 +321,7 @@
     "fact.history().show(10,False)"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -384,10 +332,7 @@
     "spark.stop()"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   }
  ],
