--- a/04_00_CHECK_jdbcConnection.ipynb
+++ b/04_00_CHECK_jdbcConnection.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "start_time": "2023-06-12T15:56:17.901227Z",
-     "end_time": "2023-06-12T15:56:20.297448Z"
+     "start_time": "2023-09-01T09:47:08.652012Z",
+     "end_time": "2023-09-01T09:47:08.867562Z"
     }
    },
    "outputs": [],
@@ -22,15 +22,14 @@
    "execution_count": 2,
    "outputs": [],
    "source": [
-    "\n",
     "import EnvironmentSetup\n",
     "EnvironmentSetup.setupEnvironment()"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-06-12T15:57:45.593856Z",
-     "end_time": "2023-06-12T15:57:46.183165Z"
+     "start_time": "2023-09-01T09:47:10.496706Z",
+     "end_time": "2023-09-01T09:47:10.543972Z"
     }
    }
   },
@@ -70,8 +69,8 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "<pyspark.sql.session.SparkSession at 0x2049f1c3d60>",
-      "text/html": "\n            <div>\n                <p><b>SparkSession - in-memory</b></p>\n                \n        <div>\n            <p><b>SparkContext</b></p>\n\n            <p><a href=\"http://host.docker.internal:4040\">Spark UI</a></p>\n\n            <dl>\n              <dt>Version</dt>\n                <dd><code>v3.4.0</code></dd>\n              <dt>Master</dt>\n                <dd><code>local[4]</code></dd>\n              <dt>AppName</dt>\n                <dd><code>DBConnectionTest</code></dd>\n            </dl>\n        </div>\n        \n            </div>\n        "
+      "text/plain": "<pyspark.sql.session.SparkSession at 0x207ec0f6040>",
+      "text/html": "\n            <div>\n                <p><b>SparkSession - in-memory</b></p>\n                \n        <div>\n            <p><b>SparkContext</b></p>\n\n            <p><a href=\"http://AKDGPORT11191.mshome.net:4040\">Spark UI</a></p>\n\n            <dl>\n              <dt>Version</dt>\n                <dd><code>v3.4.0</code></dd>\n              <dt>Master</dt>\n                <dd><code>local[4]</code></dd>\n              <dt>AppName</dt>\n                <dd><code>DBConnectionTest</code></dd>\n            </dl>\n        </div>\n        \n            </div>\n        "
      },
      "execution_count": 3,
      "metadata": {},
@@ -97,8 +96,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-06-12T15:57:53.473909Z",
-     "end_time": "2023-06-12T15:58:32.838858Z"
+     "start_time": "2023-09-01T09:07:27.601159Z",
+     "end_time": "2023-09-01T09:08:47.640416Z"
     }
    }
   },
@@ -1155,8 +1154,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-06-12T15:58:45.136815Z",
-     "end_time": "2023-06-12T15:58:54.234403Z"
+     "start_time": "2023-09-01T09:08:47.642415Z",
+     "end_time": "2023-09-01T09:08:57.601104Z"
     }
    }
   },
@@ -1170,18 +1169,22 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-06-12T15:58:57.805668Z",
-     "end_time": "2023-06-12T15:58:58.094662Z"
+     "start_time": "2023-09-01T09:08:57.580082Z",
+     "end_time": "2023-09-01T09:08:57.889080Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "outputs": [],
    "source": [],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-09-01T09:08:57.891082Z",
+     "end_time": "2023-09-01T09:08:57.905078Z"
+    }
    }
   }
  ],
