--- a/05_1_DWH_dimDate.ipynb
+++ b/05_1_DWH_dimDate.ipynb
@@ -12,8 +12,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-06-13T10:16:08.247821Z",
-     "end_time": "2023-06-13T10:16:09.074878Z"
+     "start_time": "2023-09-01T09:27:07.060453Z",
+     "end_time": "2023-09-01T09:27:07.492242Z"
     }
    },
    "outputs": [],
@@ -22,13 +22,15 @@
     "from pyspark.sql import SparkSession\n",
     "from delta import configure_spark_with_delta_pip\n",
     "import EnvironmentSetup as es\n",
-    "es.setupEnvironment()\n"
+    "import ConnectionConfig as cc\n",
+    "cc.setupEnvironment()\n"
    ]
   },
   {
    "cell_type": "markdown",
    "source": [
-    "A new configuration setting \"spark.sql.shuffle.partitions\" with value 4 is added. Default the amount of partitions is quite big. This results in excessive logging. Limiting the amount of partitions helps the log's being readable."
+    "## Start the cluster\n",
+    "Look at the getActiveSession() method in the ConnectionConfig.py file. It will return the active session. It will also add the delta package to the session and add extra jars to the session. The jars are needed to connect to the SQL Server database."
    ],
    "metadata": {
     "collapsed": false
@@ -39,15 +41,22 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-06-13T10:16:20.096058Z",
-     "end_time": "2023-06-13T10:17:04.978621Z"
+     "start_time": "2023-09-01T09:27:09.178975Z",
+     "end_time": "2023-09-01T09:28:06.918179Z"
     }
    },
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<pyspark.sql.session.SparkSession object at 0x00000217F0707A30>\n"
+     ]
+    },
+    {
      "data": {
-      "text/plain": "<pyspark.sql.session.SparkSession at 0x178b9284ac0>",
-      "text/html": "\n            <div>\n                <p><b>SparkSession - in-memory</b></p>\n                \n        <div>\n            <p><b>SparkContext</b></p>\n\n            <p><a href=\"http://AKDGPORT11191.admin.kdg.be:4040\">Spark UI</a></p>\n\n            <dl>\n              <dt>Version</dt>\n                <dd><code>v3.4.0</code></dd>\n              <dt>Master</dt>\n                <dd><code>local[*]</code></dd>\n              <dt>AppName</dt>\n                <dd><code>DimDate</code></dd>\n            </dl>\n        </div>\n        \n            </div>\n        "
+      "text/plain": "<pyspark.sql.session.SparkSession at 0x217f0707a30>",
+      "text/html": "\n            <div>\n                <p><b>SparkSession - in-memory</b></p>\n                \n        <div>\n            <p><b>SparkContext</b></p>\n\n            <p><a href=\"http://AKDGPORT11191.mshome.net:4040\">Spark UI</a></p>\n\n            <dl>\n              <dt>Version</dt>\n                <dd><code>v3.4.0</code></dd>\n              <dt>Master</dt>\n                <dd><code>local[*]</code></dd>\n              <dt>AppName</dt>\n                <dd><code>DIM_DATE</code></dd>\n            </dl>\n        </div>\n        \n            </div>\n        "
      },
      "execution_count": 2,
      "metadata": {},
@@ -55,18 +64,8 @@
     }
    ],
    "source": [
-    "\n",
-    "builder = SparkSession.builder \\\n",
-    "    .appName(\"DimDate\") \\\n",
-    "    .config(\"spark.sql.extensions\", \"io.delta.sql.DeltaSparkSessionExtension\") \\\n",
-    "    .config(\"spark.sql.catalog.spark_catalog\", \"org.apache.spark.sql.delta.catalog.DeltaCatalog\") \\\n",
-    "    .config(\"spark.sql.shuffle.partitions\", \"4\") \\\n",
-    "    .master(\"local[*]\")\n",
-    "\n",
-    "#When shuffled 4 concurrent tasks will be created.\n",
-    "builder = configure_spark_with_delta_pip(builder)\n",
-    "spark = builder.getOrCreate()\n",
-    "builder.getOrCreate()"
+    "spark = cc.startLocalCluster(\"DIM_DATE\",4)\n",
+    "spark.getActiveSession()"
    ]
   },
   {
@@ -82,11 +81,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-06-13T15:39:26.578110Z",
-     "end_time": "2023-06-13T15:39:28.941735Z"
+     "start_time": "2023-09-01T09:35:51.463792Z",
+     "end_time": "2023-09-01T09:35:56.457303Z"
     }
    },
    "outputs": [
@@ -129,8 +128,7 @@
     "beginDate = '2009-01-01'\n",
     "endDate = '2023-12-31'\n",
     "\n",
-    "df_SQL = spark.sql(f\"select explode(sequence(to_date('{beginDate}'), to_date('{endDate}'), interval 1 day)) as calendarDate\") \\\n",
-    ".withColumn(\"dateSK\", monotonically_increasing_id())\n",
+    "df_SQL = spark.sql(f\"select explode(sequence(to_date('{beginDate}'), to_date('{endDate}'), interval 1 day)) as calendarDate, monotonically_increasing_id() as dateSK \")\n",
     "\n",
     "\n",
     "df_SQL.createOrReplaceTempView('neededDates' )\n",
@@ -144,9 +142,8 @@
    "source": [
     "In this example a dataframe df_SQL is created based on the result of a select statement:\n",
     "* ```spark.sql``` is used to create daterows with sql-like language. You can find all possible SQL functions [here](https://spark.apache.org/docs/latest/api/sql/)\n",
-    "* ```explode``` generates a row for each item in the array, ```sequence``` makes the array\n",
-    "* ```withColumn()``` is a sparkSQL dataFrame function that can be found in the [DataFrame API](https://spark.apache.org/docs/latest/api/python/reference/pyspark.sql.html#dataframe-apis). The resulting dataFrame is the used dataFrame + the new defined column. Within the column you can use existing columns and perform a transformation on them. You can find column functions (```pyspark.sql.functions```) at [this link](https://spark.apache.org/docs/latest/api/python/reference/api/pyspark.sql.functions.abs.html)\n",
-    "* [```monotonically_increasing_id```](https://spark.apache.org/docs/latest/api/python/reference/api/pyspark.sql.functions.monotonically_increasing_id.html?highlight=monoton#pyspark-sql-functions-monotonically-increasing-id) is used to generate a unique id in a clustered environment\n",
+    "* [```explode```](https://spark.apache.org/docs/latest/api/sql/#explode) generates a row for each item in the array, [```sequence```](https://spark.apache.org/docs/latest/api/sql/#sequence) creates a list of dates between the begin and end date. The interval is 1 day.\n",
+    "* [```monotonically_increasing_id```](https://spark.apache.org/docs/latest/api/python/reference/pyspark.sql/api/pyspark.sql.functions.monotonically_increasing_id.html#pyspark.sql.functions.monotonically_increasing_id) is used to generate a unique id in a clustered environment\n",
     "\n",
     "The dataframe is made available to use as a table called \"neededDates\"."
    ]
@@ -173,11 +170,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-06-13T15:39:38.345897Z",
-     "end_time": "2023-06-13T15:39:39.047166Z"
+     "start_time": "2023-09-01T09:44:16.411291Z",
+     "end_time": "2023-09-01T09:44:17.348667Z"
     }
    },
    "outputs": [
@@ -259,7 +256,7 @@
     "\n",
     "### Method b: Use the dataframe API\n",
     "\n",
-    "This method does not use the sql-like language. You can achieve the same with this method and you get better code completion. See [DataFrame API](https://spark.apache.org/docs/latest/api/python/reference/pyspark.sql.html#dataframe-apis)\n",
+    "This method does not use the sql-like language. You can achieve the same with this method and you get better code completion. See [DataFrame API](https://spark.apache.org/docs/latest/api/python/reference/pyspark.sql/dataframe.html)\n",
     "As an example two columns where added with   ```withColumn``` .\n",
     "```èxpr()``` is used to write a snippet of 'sql' code and parse it into a column."
    ]
@@ -269,8 +266,8 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-04-25T11:59:13.659807Z",
-     "end_time": "2023-04-25T11:59:14.207331Z"
+     "start_time": "2023-09-01T09:43:51.351706Z",
+     "end_time": "2023-09-01T09:43:51.583163Z"
     }
    },
    "outputs": [
@@ -310,8 +307,8 @@
    "source": [
     "#from pyspark.sql.functions import explode, expr, sequence,col, date_format\n",
     "df_SparkSQL = df_SQL \\\n",
-    "    .withColumn(\"year\", date_format(col(\"calendarDate\"),'yyyy')) \\\n",
-    "    .withColumn(\"month\", date_format(col(\"calendarDate\"),'MMMM')) \\\n",
+    "    .withColumn(\"year\", date_format(\"calendarDate\",'yyyy')) \\\n",
+    "    .withColumn(\"month\", date_format(\"calendarDate\",'MMMM')) \\\n",
     "    .withColumn(\"lasyDayOfMonth\" \\\n",
     "                ,expr(\"case when calendarDate = last_day(calendarDate) then 'Y' \\\n",
     "                else 'N' \\\n",
@@ -338,11 +335,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-06-13T15:41:16.089804Z",
-     "end_time": "2023-06-13T15:41:36.825458Z"
+     "start_time": "2023-09-01T09:44:22.535377Z",
+     "end_time": "2023-09-01T09:44:39.015219Z"
     }
    },
    "outputs": [],
