--- a/00_0_CHECK_1_install.ipynb
+++ b/00_0_CHECK_1_install.ipynb
@@ -22,8 +22,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "start_time": "2023-08-29T13:33:27.906457Z",
-     "end_time": "2023-08-29T13:33:28.291601Z"
+     "start_time": "2023-09-12T13:26:47.496675Z",
+     "end_time": "2023-09-12T13:26:48.045053Z"
     }
    },
    "outputs": [],
@@ -36,7 +36,7 @@
    "cell_type": "markdown",
    "source": [
     "### Step 2 : Setting up environment variables\n",
-    "To avoid setting up the environment variables in your os, this code will set the correct variables. Make sure you adjusted EnvironmentSetup.py with the correct directories.\n",
+    "To avoid setting up the environment variables in your os, this code will set the correct variables. Make sure you adjusted ConnectionConfig.py with the correct directories.\n",
     "Look closely at the listed variables to make sure everything is set correctly. PATH, HADOOP_HOME, JAVA_HOME and SPARK_HOME should be set correctly.\n"
    ],
    "metadata": {
@@ -59,8 +59,6 @@
       "COMPUTERNAME: AKDGPORT11191\n",
       "COMSPEC: C:\\WINDOWS\\system32\\cmd.exe\n",
       "DRIVERDATA: C:\\Windows\\System32\\Drivers\\DriverData\n",
-      "FPS_BROWSER_APP_PROFILE_STRING: Internet Explorer\n",
-      "FPS_BROWSER_USER_PROFILE_STRING: Default\n",
       "HOMEDRIVE: C:\n",
       "HOMEPATH: \\Users\\overvelj\n",
       "IDEA_INITIAL_DIRECTORY: C:\\WINDOWS\\system32\n",
@@ -69,7 +67,7 @@
       "LANGUAGE: \n",
       "LC_ALL: en_US.UTF-8\n",
       "LOCALAPPDATA: C:\\Users\\overvelj\\AppData\\Local\n",
-      "LOGONSERVER: \\\\CDCDCADM01\n",
+      "LOGONSERVER: \\\\CDCDCADM02\n",
       "NUMBER_OF_PROCESSORS: 8\n",
       "ONEDRIVE: C:\\Users\\overvelj\\OneDrive - Karel de Grote Hogeschool\n",
       "ONEDRIVECOMMERCIAL: C:\\Users\\overvelj\\OneDrive - Karel de Grote Hogeschool\n",
@@ -116,9 +114,9 @@
       "_OLD_VIRTUAL_PATH: C:\\Program Files (x86)\\Common Files\\Oracle\\Java\\javapath;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Python\\Python39;C:\\Program Files\\Common Files\\Oracle\\Java\\javapathREMOVE;C:\\Program Files (x86)\\Common Files\\Oracle\\Java\\javapathREMOVE;C:\\WINDOWS\\system32;C:\\WINDOWS;C:\\WINDOWS\\System32\\Wbem;C:\\WINDOWS\\System32\\WindowsPowerShell\\v1.0\\;C:\\WINDOWS\\System32\\OpenSSH\\;C:\\Program Files (x86)\\Microsoft SQL Server\\150\\DTS\\Binn\\;C:\\Program Files\\dotnet\\;C:\\Program Files\\Azure Data Studio\\bin;C:\\Program Files\\Graphviz\\bin;C:\\Program Files\\mongosh\\;C:\\Program Files\\MongoDB\\Server\\5.0\\bin;C:\\DevApps\\VENV309_DS2\\\\Scripts;C:\\Program Files\\Microsoft SQL Server\\Client SDK\\ODBC\\170\\Tools\\Binn\\;C:\\DevApps\\gradle-7.6\\bin;C:\\Program Files\\Docker\\Docker\\resources\\bin;C:\\Program Files\\Git\\cmd;C:\\Program Files\\Amazon\\AWSCLIV2\\;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Python\\Python310_9\\Scripts\\;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Python\\Python310_9\\;C:\\Users\\overvelj\\AppData\\Local\\Microsoft\\WindowsApps;C:\\Users\\overvelj\\.dotnet\\tools;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Microsoft VS Code\\bin;C:\\Users\\overvelj\\AppData\\Local\\Programs\\Git\\cmd;C:\\Program Files\\mongosh\\;C:\\Users\\overvelj\\AppData\\Local\\JetBrains\\Toolbox\\scripts\n",
       "_OLD_VIRTUAL_PROMPT: $P$G\n",
       "PYDEVD_USE_FRAME_EVAL: NO\n",
-      "JPY_INTERRUPT_EVENT: 1660\n",
-      "IPY_INTERRUPT_EVENT: 1660\n",
-      "JPY_PARENT_PID: 1664\n",
+      "JPY_INTERRUPT_EVENT: 1768\n",
+      "IPY_INTERRUPT_EVENT: 1768\n",
+      "JPY_PARENT_PID: 1628\n",
       "TERM: xterm-color\n",
       "CLICOLOR: 1\n",
       "FORCE_COLOR: 1\n",
@@ -134,15 +132,15 @@
     }
    ],
    "source": [
-    "import EnvironmentSetup as es\n",
-    "es.setupEnvironment()\n",
-    "es.listEnvironment()"
+    "import ConnectionConfig as cc\n",
+    "cc.setupEnvironment()\n",
+    "cc.listEnvironment()"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-08-29T13:33:28.291601Z",
-     "end_time": "2023-08-29T13:33:28.306864Z"
+     "start_time": "2023-09-12T13:27:19.489029Z",
+     "end_time": "2023-09-12T13:27:19.588706Z"
     }
    }
   },
@@ -176,8 +174,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-08-29T13:33:28.306864Z",
-     "end_time": "2023-08-29T13:33:28.422761Z"
+     "start_time": "2023-09-12T13:27:41.963005Z",
+     "end_time": "2023-09-12T13:27:42.059850Z"
     }
    }
   },
@@ -206,7 +204,7 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "<pyspark.sql.session.SparkSession at 0x225e16daca0>",
+      "text/plain": "<pyspark.sql.session.SparkSession at 0x1540d0bfd60>",
       "text/html": "\n            <div>\n                <p><b>SparkSession - in-memory</b></p>\n                \n        <div>\n            <p><b>SparkContext</b></p>\n\n            <p><a href=\"http://AKDGPORT11191.mshome.net:4040\">Spark UI</a></p>\n\n            <dl>\n              <dt>Version</dt>\n                <dd><code>v3.4.0</code></dd>\n              <dt>Master</dt>\n                <dd><code>local[*]</code></dd>\n              <dt>AppName</dt>\n                <dd><code>InstallCheck</code></dd>\n            </dl>\n        </div>\n        \n            </div>\n        "
      },
      "execution_count": 4,
@@ -221,8 +219,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-08-29T13:33:28.322786Z",
-     "end_time": "2023-08-29T13:33:43.054036Z"
+     "start_time": "2023-09-12T13:28:15.275412Z",
+     "end_time": "2023-09-12T13:28:35.261641Z"
     }
    }
   },
@@ -297,8 +295,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-08-29T13:33:43.056036Z",
-     "end_time": "2023-08-29T13:33:48.232373Z"
+     "start_time": "2023-09-12T13:29:08.575823Z",
+     "end_time": "2023-09-12T13:29:13.592815Z"
     }
    }
   },
@@ -358,8 +356,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-08-29T13:33:48.232373Z",
-     "end_time": "2023-08-29T13:33:50.956979Z"
+     "start_time": "2023-09-12T13:29:26.225787Z",
+     "end_time": "2023-09-12T13:29:28.842894Z"
     }
    }
   },
@@ -405,9 +403,18 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-08-29T13:33:50.956979Z",
-     "end_time": "2023-08-29T13:34:05.964298Z"
+     "start_time": "2023-09-12T13:29:49.762419Z",
+     "end_time": "2023-09-12T13:30:06.247619Z"
     }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
    }
   }
  ],
