--- a/01_0_EXAMPLE_1_sparkBasics.ipynb
+++ b/01_0_EXAMPLE_1_sparkBasics.ipynb
@@ -12,21 +12,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "outputs": [],
    "source": [
     "import datetime\n",
     "#Make sure pyspark is installed as a package of your project.\n",
     "from pyspark import SparkConf, SparkContext\n",
-    "import EnvironmentSetup as es\n",
+    "import ConnectionConfig as cc\n",
     "# This method will setup the environment variables for you. See EnvironmentSetup.py for more information.\n",
-    "es.setupEnvironment()"
+    "cc.setupEnvironment()"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-08-29T13:52:05.020637Z",
-     "end_time": "2023-08-29T13:52:05.142933Z"
+     "start_time": "2023-09-12T13:52:13.991771Z",
+     "end_time": "2023-09-12T13:52:14.039106Z"
     }
    }
   },
@@ -48,13 +48,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "outputs": [
     {
      "data": {
       "text/plain": "'http://AKDGPORT11191.mshome.net:4041'"
      },
-     "execution_count": 13,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -75,8 +75,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-08-29T14:31:07.680373Z",
-     "end_time": "2023-08-29T14:31:07.727692Z"
+     "start_time": "2023-09-12T13:52:15.919079Z",
+     "end_time": "2023-09-12T13:52:16.178786Z"
     }
    }
   },
@@ -106,8 +106,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 7,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "PythonRDD[6] at RDD at PythonRDD.scala:53"
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n"
+     ]
+    }
+   ],
    "source": [
     "import datetime\n",
     "\n",
@@ -130,14 +146,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-08-29T13:52:05.322573Z",
-     "end_time": "2023-08-29T13:52:13.754617Z"
+     "start_time": "2023-09-12T13:52:19.377750Z",
+     "end_time": "2023-09-12T13:52:32.972176Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "\n",
@@ -147,18 +163,22 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-08-29T13:52:13.754617Z",
-     "end_time": "2023-08-29T13:52:13.823653Z"
+     "start_time": "2023-09-12T13:37:53.988919Z",
+     "end_time": "2023-09-12T13:37:54.933703Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "outputs": [],
    "source": [],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2023-09-12T13:37:54.935875Z",
+     "end_time": "2023-09-12T13:37:54.949144Z"
+    }
    }
   }
  ],
