--- a/01_1_TASK_1_sparkBasics.ipynb
+++ b/01_1_TASK_1_sparkBasics.ipynb
@@ -3,21 +3,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# SparkBasicsTask\n",
-    "> 1. Run the first cell to start the Spark Server\n",
-    "> 2. Run the second cell to excecute the wordcount code\n",
-    "> 3. Go to the SparkUI Url. How many jobs and stages are there and why?\n",
-    "> 4. Copy/paste te wordcount code in a new cell.\n",
-    "> 5. Add lines of code after the reduceByKey to also save the counts of the first letter of the word. The wordCount and letterCount must be saved seperately.\n",
-    "_Tip: Python key values are represented by Tuples. To change the (word, count) tuple to (letter,count) you kan use a map function with (wordTuple[0][0],wordTuple[1]). The first [0] represents the first element of the tuple (the key). The second [0] is the first letter of the key string)_\n",
-    "> 6. Go to the SparkUI Url. How many jobs are created? Why? Inspect the DAG of the 2 last jobs.\n",
-    "_The engine creates a job for every \"action\" in the code. For every action it will create a new excecution plan and all tranformations will be processed twice._\n",
-    "> 7. Go to the Storage tab. Notice the tab is empty.\n",
-    "> 8. To avoid Spark from excecuting all the steps twice, add wordCounts.cache() after the reduceByKey.\n",
-    "> 9. Run the code again. How many jobs are created now? Why? Inspect the DAG of the 2 last jobs. What is the difference with the previous DAGS?\n",
-    "> 10. Go to the Storage tab. Notice the tab is not empty anymore. Inspect the storage tab.\n",
-    "> _By enabling caching, the first job will store the intermediate result. The second job will reuse this result, which will prevent processing the same steps twice. With caching, you can choose between processing and memory. When enough memory is available you can greatly increase the performance of the jobs._\n",
-    "> 11. Excecute sc.stop() to stop the Spark Server\n"
+    "\n"
    ],
    "metadata": {
     "collapsed": false
@@ -40,8 +26,8 @@
     "import datetime\n",
     "#Make sure pyspark is installed as a package of your project.\n",
     "from pyspark import SparkConf, SparkContext\n",
-    "import EnvironmentSetup as es\n",
-    "es.setupEnvironment()\n",
+    "import ConnectionConfig as cc\n",
+    "cc.setupEnvironment()\n",
     "conf = SparkConf().setAppName(\"firstJob\").setMaster(\"local[*]\").setIfMissing(\"spark.logLineage\", \"true\")\n",
     "sc =SparkContext.getOrCreate((conf))\n",
     "sc.uiWebUrl"
@@ -84,11 +70,43 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "# SparkBasicsTask\n",
+    "> 1. Run the first cell to start the Spark Server\n",
+    "> 2. Run the second cell to excecute the wordcount code\n",
+    "> 3. Go to the SparkUI Url. How many jobs and stages are there and why?\n",
+    "> 4. Copy/paste te wordcount code in a new cell.\n",
+    "> 5. Add lines of code after the reduceByKey to also save the counts of the first letter of the word. The wordCount and letterCount must be saved seperately.\n",
+    "_Tip: Python key values are represented by Tuples. To change the (word, count) tuple to (letter,count) you kan use a map function with (wordTuple[0][0],wordTuple[1]). The first [0] represents the first element of the tuple (the key). The second [0] is the first letter of the key string)_\n",
+    "> 6. Go to the SparkUI Url. How many jobs are created? Why? Inspect the DAG of the 2 last jobs.\n",
+    "_The engine creates a job for every \"action\" in the code. For every action it will create a new excecution plan and all tranformations will be processed twice._\n",
+    "> 7. Go to the Storage tab. Notice the tab is empty.\n",
+    "> 8. To avoid Spark from excecuting all the steps twice, add wordCounts.cache() after the wordKv.reduceByKey.\n",
+    "> 9. Run the code again. How many jobs are created now? Why? Inspect the DAG of the 2 last jobs. What is the difference with the previous DAGS?\n",
+    "> 10. Go to the Storage tab. Notice the tab is not empty anymore. Inspect the storage tab.\n",
+    "> _By enabling caching, the first job will store the intermediate result. The second job will reuse this result, which will prevent processing the same steps twice. With caching, you can choose between processing and memory. When enough memory is available you can greatly increase the performance of the jobs._\n",
+    "> 11. Excecute sc.stop() to stop the Spark Server"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
    "source": [
     "#Add your code here"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Execute stop after finishing the task"
    ],
    "metadata": {
     "collapsed": false
