--- a/01_1_TASK_1_sparkBasics_SOLUTION.ipynb
+++ b/01_1_TASK_1_sparkBasics_SOLUTION.ipynb
@@ -41,8 +41,8 @@
     "import datetime\n",
     "#Make sure pyspark is installed as a package of your project.\n",
     "from pyspark import SparkConf, SparkContext\n",
-    "import EnvironmentSetup as es\n",
-    "es.setupEnvironment()\n",
+    "import ConnectionConfig as cc\n",
+    "cc.setupEnvironment()\n",
     "conf = SparkConf().setAppName(\"firstJob\").setMaster(\"local[*]\").setIfMissing(\"spark.logLineage\", \"true\")\n",
     "sc =SparkContext.getOrCreate((conf))\n",
     "sc.uiWebUrl"
